<resources>
    <string name="app_name">ToDo</string>
    <string name="login">Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="user_name">User Name</string>
    <string name="profile_picture">profile_picture</string>
    <string name="settings">Settings</string>
    <string name="back_button">back button</string>
    <string name="tasks">Tasks</string>
    <string name="name">Name</string>

    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="language_message">Select Language</string>

    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>

    <string name="login_successful">Login successful</string>
    <string name="authentication_failed">Authentification failed</string>

    <string name="account_created">Account created</string>
    <string name="profile_updated">Profile updated</string>

    <string name="delete_task">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this Task?</string>

    <string name="Confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>

    <string name="edit_display_name_hint">New Name</string>
    <string name="new_password_hint">New Password</string>

</resources>